# owox-harness

./: .gitignore  NOTICE  README.ja.md  README.md  owox-harness.code-workspace
.agents/skills/util-caveman/: SKILL.md
.agents/skills/util-genshijin/: SKILL.md
.devcontainer/: Dockerfile  compose.yml  devcontainer.json
.devcontainer/scripts/: post-create.sh
.github/workflows/: release.yml
control/: .gitignore  .owox-version  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
control/.claude/: settings.json
control/.codex/: config.toml
control/crates/core/: Cargo.toml
control/crates/core/src/: agents.rs  branch_memory.rs  canon.rs  canon_detect.rs  commands.rs  decay.rs  delivery.rs  envelope.rs  experience.rs  gate.rs  glossary.rs  glossary_suggestions.rs  hook.rs  irreversible.rs  knowledge.rs  lib.rs  load.rs  markdown.rs  model.rs  practices.rs  profile.rs  quality.rs  record.rs  release.rs  requirement.rs  review.rs  routine.rs  secret.rs  skill.rs  state.rs  target.rs  task.rs  tokens.rs  usage.rs  verify.rs
control/crates/core/src/targets/: claude.rs  codex.rs  mod.rs
control/crates/core/tests/: generate_codex.rs
control/crates/mcp/: Cargo.toml
control/crates/mcp/src/: cache.rs  clock.rs  files.rs  generate.rs  hook.rs  main.rs  serve.rs  setup.rs
control/docs/competitive/: 20260612-BMAD-METHOD.md  20260612-Beads.md  20260612-Claude-Flow-ruflo.md  20260612-Claude-Squad.md  20260612-Context-Engineering-Intro.md  20260612-Deep-Agents.md  20260612-Gastown.md  20260612-Graphiti.md  (+14 more)
control/scripts/: check-target-cleanliness.sh  install.ps1  setup.sh
(+136 files in other folders)
